[package]
name = "hadeda"
version = "0.1.0"
edition = "2021"

[dependencies]
hal             = { package = "esp32c3-hal", version = "0.13.0" }
esp-backtrace   = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-alloc.git", rev = "0de07251b"}
esp-println     = { version = "0.7.1", features = ["esp32c3"] }
icm42670 = "0.1.1"
shared-bus = "0.3.1"
shtcx = "0.11.0"
critical-section = "1.1.2"
proto = { path = "../proto", default-features = false }
serde-json-core = "0.5.1"
nalgebra = { version = "0.32", default-features = false, features = ["libm"] }
ahrs = { git = "https://github.com/KarooSpace/ahrs-rs.git", branch = "master", default-features = false }

[dependencies.microfft]
version = "0.5.1"
default-features = false
features = ["size-512"]

[lints]
workspace = true
