[package]
name = "music"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
faer = { version = "0.16.0", default-features = false }
matfile = { version = "0.4.0", optional = true }
thiserror = { version = "1.0.53", default-features = false }

[features]
default = ["std"]

std = ["faer/std", "matfile"]

